# comfyui-parse-image

./: README.md  __init__.py  package.json  pyproject.toml
js/: index.js
js/libs/: workflow-editor.js  workflow-parser.js
py/: index.py
py/libs/: widget.py  workflow.py
py/nodes/: parsers.py
